--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                     <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex">
-                                <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-light" style="width: 65px; height: 65px;">
+                                <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-dark" style="width: 65px; height: 65px;">
                                     <i class="fa fa-2x fa-phone-alt text-primary"></i>
                                 </div>
                                 <div class="ms-4">
@@ -556,7 +556,7 @@
                         </div>
                         <div class="col-12">
                             <div class="d-flex">
-                                <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-light" style="width: 65px; height: 65px;">
+                                <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-dark" style="width: 65px; height: 65px;">
                                     <i class="fa fa-2x fa-envelope-open text-primary"></i>
                                 </div>
                                 <div class="ms-4">
