--- a/about.html
+++ b/about.html
@@ -34,9 +34,11 @@
 
 <body>
     <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status"></div>
-        <img class="position-absolute top-50 start-50 translate-middle" src="img/icons/icon-1.png" alt="Icon">
+    <div id="spinner"
+        class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+        <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status">
+        </div>
+        <img width="700px" class="position-absolute top-50 start-50 translate-middle" src="img/icons/logo-aleco-doors-and-windows.png" alt="Icon">
     </div>
     <!-- Spinner End -->
 
@@ -46,20 +48,24 @@
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-3">
-                    <a class="text-body px-2" href="tel:+0123456789"><i class="fa fa-phone-alt text-primary me-2"></i>+012 345 6789</a>
-                    <a class="text-body px-2" href="mailto:info@example.com"><i class="fa fa-envelope-open text-primary me-2"></i>info@example.com</a>
+                    <a class="text-body px-2" href="tel:+917947129016"><i
+                            class="fa fa-phone-alt text-primary me-2"></i>+91 7947 129 016</a>
+                    <a class="text-body px-2" href="mailto:info@alecowindows.com"><i
+                            class="fa fa-envelope-open text-primary me-2"></i>info@alecowindows.com</a>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
-                <div class="h-100 d-inline-flex align-items-center py-3 me-2">
+                <!-- <div class="h-100 d-inline-flex align-items-center py-3 me-2">
                     <a class="text-body px-2" href="">Terms</a>
                     <a class="text-body px-2" href="">Privacy</a>
-                </div>
+                </div> -->
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square btn-outline-body me-1" href=""><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-sm-square btn-outline-body me-1"
+                        href="https://www.facebook.com/ecodoorswindows"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-sm-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-sm-square btn-outline-body me-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-sm-square btn-outline-body me-0" href=""><i class="fab fa-instagram"></i></a>
+                    <!-- <a class="btn btn-sm-square btn-outline-body me-1" href=""><i class="fab fa-linkedin-in"></i></a> -->
+                    <a class="btn btn-sm-square btn-outline-body me-0"
+                        href="https://www.instagram.com/ecodoorswindows/"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -68,32 +74,35 @@
 
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
+    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn"
+        data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <h1 class="text-primary m-0"><img class="me-3" src="img/icons/icon-1.png" alt="Icon">Arkitektur</h1>
+            <h1 class="text-primary m-0"><img class="me-3" src="img/icons/logo-aleco-doors-and-windows.png"
+                    width="350px" alt="Icon"></h1>
         </a>
-        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <button type="button" style="margin: auto;" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link active">About</a>
-                <a href="service.html" class="nav-item nav-link">Services</a>
+                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="about.html" class="nav-item nav-link">About</a>
+                <!-- <a href="service.html" class="nav-item nav-link">Services</a> -->
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
                     <div class="dropdown-menu border-0 m-0">
-                        <a href="feature.html" class="dropdown-item">Our Features</a>
-                        <a href="project.html" class="dropdown-item">Our Projects</a>
-                        <a href="team.html" class="dropdown-item">Team Members</a>
+                        <a href="feature.html" class="dropdown-item">Windows</a>
+                        <a href="project.html" class="dropdown-item">Doors</a>
+                        <!-- <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="404.html" class="dropdown-item">404 Page</a> -->
                     </div>
                 </div>
+                <a href="project.html" class="nav-item nav-link">Projects</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="https://htmlcodex.com/architecture-html-template-pro" class="btn btn-primary py-2 px-4 d-none d-lg-block">Pro Version</a>
+            <a href="tel:+917947129016" class="btn btn-primary py-2 px-4 d-none d-lg-block">Call Now</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -128,19 +137,19 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h4 class="section-title">About Us</h4>
                     <h1 class="display-5 mb-4">A Creative Architecture Agency For Your Dream Home</h1>
-                    <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                    <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos.</p>
+                    <p>ALECO By Eco doors and windows manufactures Aluminium/Upvc doors and windows, internal partitions, wardrobe shutters. We are serving in industry from last one decade.</p>
+                    <p class="mb-4">Registered in 2016, ECO Doors & Windows has made a name for itself in the list of top suppliers of in India and is one of the leading sellers of listed products. ECO Doors & Windows is listed in Trade India's list of verified sellers offering supreme quality of etc.</p>
                     <div class="d-flex align-items-center mb-5">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center border border-5 border-primary" style="width: 120px; height: 120px;">
-                            <h1 class="display-1 mb-n2" data-toggle="counter-up">25</h1>
+                            <h1 class="display-1 mb-n2" data-toggle="counter-up">10</h1>
                         </div>
                         <div class="ps-4">
                             <h3>Years</h3>
-                            <h3>Working</h3>
-                            <h3 class="mb-0">Experience</h3>
+                            <h3>Serving</h3>
+                            <h3 class="mb-0">Industry</h3>
                         </div>
                     </div>
-                    <a class="btn btn-primary py-3 px-5" href="">Read More</a>
+                    <a class="btn btn-primary py-3 px-5" href="./about.html">Read More</a>
                 </div>
             </div>
         </div>
@@ -155,14 +164,14 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h4 class="section-title">Why Choose Us!</h4>
                     <h1 class="display-5 mb-4">Why You Should Trust Us? Learn More About Us!</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                    <p class="mb-4">We are a company that specializes in selling premium doors, windows and related products. We pride ourselves on offering the highest quality products at affordable prices. The satisfaction of our customers is our number one priority!</p>
                     <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex align-items-start">
                                 <img class="flex-shrink-0" src="img/icons/icon-2.png" alt="Icon">
                                 <div class="ms-4">
                                     <h3>Design Approach</h3>
-                                    <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                    <p class="mb-0">Our methodology for creating ideal designs involves a whole process for uniquely analysing and developing an enviroment.</p>
                                 </div>
                             </div>
                         </div>
@@ -171,7 +180,7 @@
                                 <img class="flex-shrink-0" src="img/icons/icon-3.png" alt="Icon">
                                 <div class="ms-4">
                                     <h3>Innovative Solutions</h3>
-                                    <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                    <p class="mb-0">From entryways to sliding glass doors, from architraves to casings, we have what you need for your home or office improvement project.</p>
                                 </div>
                             </div>
                         </div>
@@ -180,7 +189,7 @@
                                 <img class="flex-shrink-0" src="img/icons/icon-4.png" alt="Icon">
                                 <div class="ms-4">
                                     <h3>Project Management</h3>
-                                    <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                    <p class="mb-0">To achieve all project goals within the given constraints, we have a team of specialized workers.</p>
                                 </div>
                             </div>
                         </div>
@@ -202,8 +211,8 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h4 class="section-title">Team Members</h4>
-                <h1 class="display-5 mb-4">We Are Creative Architecture Team For Your Dream Home</h1>
+                <h4 class="section-title">Meet Executives</h4>
+                <h1 class="display-5 mb-4">The Entrepreneurs Behind The Excellence</h1>
             </div>
             <div class="row g-0 team-items">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -217,7 +226,7 @@
                             </div>
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h3 class="mt-2">Architect Name</h3>
+                            <h3 class="mt-2">Entrepreneur Name</h3>
                             <span class="text-primary">Designation</span>
                         </div>
                     </div>
@@ -233,7 +242,7 @@
                             </div>
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h3 class="mt-2">Architect Name</h3>
+                            <h3 class="mt-2">Entrepreneur Name</h3>
                             <span class="text-primary">Designation</span>
                         </div>
                     </div>
@@ -249,7 +258,7 @@
                             </div>
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h3 class="mt-2">Architect Name</h3>
+                            <h3 class="mt-2">Entrepreneur Name</h3>
                             <span class="text-primary">Designation</span>
                         </div>
                     </div>
@@ -265,7 +274,7 @@
                             </div>
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h3 class="mt-2">Architect Name</h3>
+                            <h3 class="mt-2">Entrepreneur Name</h3>
                             <span class="text-primary">Designation</span>
                         </div>
                     </div>
