--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicons/site.webmanifest">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +44,8 @@
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status">
         </div>
-        <img width="700px" class="position-absolute top-50 start-50 translate-middle" src="img/icons/logo-aleco-doors-and-windows.png" alt="Icon">
+        <img width="700px" class="position-absolute top-50 start-50 translate-middle"
+            src="img/icons/logo-aleco-doors-and-windows.png" alt="Icon">
     </div>
     <!-- Spinner End -->
 
@@ -82,7 +87,8 @@
             <h1 class="text-primary m-0"><img class="me-3" src="img/icons/logo-aleco-doors-and-windows.png"
                     width="350px" alt="Icon"></h1>
         </a>
-        <button type="button" style="margin: auto;" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <button type="button" style="margin: auto;" class="navbar-toggler me-4" data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -119,9 +125,13 @@
                     <div class="container">
                         <div class="row filter-cus justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown">Let that Natural Sunlight shine in your Indoors</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">42% increment in overall wellness (including relaxation and happiness) levels grow with access to sunlight at home.</p>
-                                <a href="tel:+917947129016" class="btn btn-primary py-3 px-5 animated slideInLeft">Call us to Know More</a>
+                                <h1 class="display-1 text-white animated slideInDown">Let that Natural Sunlight shine in
+                                    your Indoors</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">42% increment in overall wellness
+                                    (including relaxation and happiness) levels grow with access to sunlight at home.
+                                </p>
+                                <a href="tel:+917947129016" class="btn btn-primary py-3 px-5 animated slideInLeft">Call
+                                    us to Know More</a>
                             </div>
                         </div>
                     </div>
@@ -133,9 +143,12 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown">Inhouse Manufacturing of Premium UPVC Materials</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">We are best when it come to crafting elegance with best quality materials.</p>
-                                <a href="#enquiry" class="btn btn-primary py-3 px-5 animated slideInLeft">Enquire Now</a>
+                                <h1 class="display-1 text-white animated slideInDown">Inhouse Manufacturing of Premium
+                                    UPVC Materials</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">We are best when it come to crafting
+                                    elegance with best quality materials.</p>
+                                <a href="#enquiry" class="btn btn-primary py-3 px-5 animated slideInLeft">Enquire
+                                    Now</a>
                             </div>
                         </div>
                     </div>
@@ -147,9 +160,12 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown">We believe in Brand Loyalty and Trust in Business</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Call us now to know more from the experts and have a better idea about your perfect needs for your requirements.</p>
-                                <a href="#enquiry" class="btn btn-primary py-3 px-5 animated slideInLeft">Book a Call</a>
+                                <h1 class="display-1 text-white animated slideInDown">We believe in Brand Loyalty and
+                                    Trust in Business</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Call us now to know more from the experts
+                                    and have a better idea about your perfect needs for your requirements.</p>
+                                <a href="#enquiry" class="btn btn-primary py-3 px-5 animated slideInLeft">Book a
+                                    Call</a>
                             </div>
                         </div>
                     </div>
@@ -739,8 +755,7 @@
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div> -->
-                    <iframe
-                        class="fb-iframe"
+                    <iframe class="fb-iframe"
                         src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fecodoorswindows&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
                         width="100%" height="330" style="border:none;overflow:hidden;" scrolling="no" frameborder="0"
                         allowfullscreen="true"
