adding coming soon page

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
                     <div class="dropdown-menu border-0 m-0">
-                        <a href="#" class="dropdown-item">UPVC Doors and Windows</a>
-                        <a href="#" class="dropdown-item">Alluminium Doors and Windows</a>
-                        <a href="#" class="dropdown-item">Railings and Internal Partitions</a>
-                        <a href="#" class="dropdown-item">Facades</a>
+                        <a href="./coming-soon.html" class="dropdown-item">UPVC Doors and Windows</a>
+                        <a href="./coming-soon.html" class="dropdown-item">Alluminium Doors and Windows</a>
+                        <a href="./coming-soon.html" class="dropdown-item">Railings and Internal Partitions</a>
+                        <a href="./coming-soon.html" class="dropdown-item">Facades</a>
                         <!-- <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
@@ -133,7 +133,7 @@
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">42% increment in overall wellness
                                     (including relaxation and happiness) levels grow with access to sunlight at home.
                                 </p>
-                                <a href="tel:+917947129016" class="btn btn-primary py-3 px-5 animated slideInLeft">Call
+                                <a href="tel:+918146042285" class="btn btn-primary py-3 px-5 animated slideInLeft">Call
                                     us to Know More</a>
                             </div>
                         </div>
@@ -254,7 +254,7 @@
     <!-- About End -->
 
     <!-- Carousel End -->
-    <div class="row-cus">
+    <!-- <div class="row-cus">
         <div class="container">
             <section class="customer-logos slider">
                 <div class="slide"><img src="./img/clients/image1.png"></div>
@@ -267,7 +267,7 @@
                 <div class="slide"><img src="./img/clients/image8.png"></div>
             </section>
         </div>
-    </div>
+    </div> -->
 
 
     <!-- Service Start -->
@@ -286,7 +286,7 @@
                             <h3 class="mb-3">UPVC Doors & Windows</h3>
                             <p class="mb-4">UPVC doors and windows are known for their energy-efficiency, providing
                                 improved insulation and reducing heat loss.</p>
-                            <a class="btn" href="./">Read More</a>
+                            <a class="btn" href="./coming-soon.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -299,7 +299,7 @@
                             <p class="mb-4">The Max system refers to the company's high-end product range, which is
                                 designed to provide with the combination of security, and
                                 energy efficiency.</p>
-                            <a class="btn" href="./">Read More</a>
+                            <a class="btn" href="./coming-soon.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -311,7 +311,7 @@
                             <h3 class="mb-3">Alluminium Doors & Windows</h3>
                             <p class="mb-4">Aluminium doors and windows can be manufactured with high-performance double
                                 glazing and weather stripping, improving their energy efficiency.</p>
-                            <a class="btn" href="./">Read More</a>
+                            <a class="btn" href="./coming-soon.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -323,7 +323,7 @@
                             <h3 class="mb-3">Railings and Internal Partitions</h3>
                             <p class="mb-4">We use high-quality and durable materials, such as stainless steel, glass,
                                 and wood, to manufacture the railings and partitions.</p>
-                            <a class="btn" href="./">Read More</a>
+                            <a class="btn" href="./coming-soon.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -335,7 +335,7 @@
                             <h3 class="mb-3">Facades</h3>
                             <p class="mb-4">Facades play a critical role in defining the overall appearance
                                 of a building and can impact its aesthetic, energy efficiency, and durability.</p>
-                            <a class="btn" href="./">Read More</a>
+                            <a class="btn" href="./coming-soon.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -452,9 +452,10 @@
                                 </div>
                                 <div class="col-md-6">
                                     <h1 class="mb-3">One Of The Leading School Chains in India</h1>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-                                        diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit
-                                        clita duo justo magna dolore erat amet</p>
+                                    <p class="mb-4">Invictus School Amritsar is known as 'Dream School' that aims to be
+                                        an answer to parent's prayers for their child's education. Indeed, this school
+                                        is a school for tomorrow's that encourages mastery not only of core academic
+                                        subjects but of higher cognitive skills that the global economy demands.</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Quality materials</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Innovative Solutions</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Wide range of products</p>
@@ -799,7 +800,6 @@
                         &copy; <a href="#">Alecowindows.com</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Developed By <a
                             href="https://rkinfotechsolutions.com?utm_source=rk12&utm_medium=website&utm_campaign=aleco">RK
                             Infotech Solutions</a>
@@ -812,13 +812,13 @@
 
 
     <!-- Back to Top -->
-    <a href="https://wa.me/917947129016?text=Hey!%20I%20would%20like%20to%20know%20more%20about%20your%20services."
+    <a href="https://wa.me/918146042285?text=Hey!%20I%20would%20like%20to%20know%20more%20about%20your%20services."
         class="btn btn-lg btn-primary btn-lg-square back-to-top"><img src="./img/whatsapp-aleco-windows-amritsar.png"
             alt="aleco-whatsapp" /></a>
     <div id="wa-box" class="wa-float back-to-top">
         <i onclick="closeWA()" class="bi bi-x"></i>
         <p>Let's chat about your dream project!</p>
-        <a href="https://wa.me/917947129016?text=Hey!%20I%20would%20like%20to%20know%20more%20about%20your%20services.">
+        <a href="https://wa.me/918146042285?text=Hey!%20I%20would%20like%20to%20know%20more%20about%20your%20services.">
             Chat Now
         </a>
     </div>
