--- a/about.html
+++ b/about.html
@@ -38,7 +38,8 @@
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status">
         </div>
-        <img width="700px" class="position-absolute top-50 start-50 translate-middle" src="img/icons/logo-aleco-doors-and-windows.png" alt="Icon">
+        <img class="position-absolute top-50 start-50 translate-middle" src="img/icons/logo-aleco-doors-and-windows.png"
+            alt="Icon">
     </div>
     <!-- Spinner End -->
 
@@ -48,8 +49,8 @@
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-3">
-                    <a class="text-body px-2" href="tel:+917947129016"><i
-                            class="fa fa-phone-alt text-primary me-2"></i>+91 7947 129 016</a>
+                    <a class="text-body px-2" href="tel:+918146042285"><i
+                            class="fa fa-phone-alt text-primary me-2"></i>+91 8146-042-285 | + 91 9814-051-943</a>
                     <a class="text-body px-2" href="mailto:info@alecowindows.com"><i
                             class="fa fa-envelope-open text-primary me-2"></i>info@alecowindows.com</a>
                 </div>
@@ -62,7 +63,7 @@
                 <div class="h-100 d-inline-flex align-items-center">
                     <a class="btn btn-sm-square btn-outline-body me-1"
                         href="https://www.facebook.com/ecodoorswindows"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-sm-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a>
+                    <!-- <a class="btn btn-sm-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a> -->
                     <!-- <a class="btn btn-sm-square btn-outline-body me-1" href=""><i class="fab fa-linkedin-in"></i></a> -->
                     <a class="btn btn-sm-square btn-outline-body me-0"
                         href="https://www.instagram.com/ecodoorswindows/"><i class="fab fa-instagram"></i></a>
@@ -77,10 +78,12 @@
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn"
         data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <h1 class="text-primary m-0"><img class="me-3" src="img/icons/logo-aleco-doors-and-windows.png"
-                    width="350px" alt="Icon"></h1>
+            <img class="me-3 logo-img" src="./img/icons/logo-aleco-doors-and-windows.png" width="350px" alt="Icon"> <img
+                class="me-3 logo-img-mob" src="./img/icons/logo-aleco-doors-and-windows-mob.png" width="100%"
+                alt="Icon">
         </a>
-        <button type="button" style="margin: auto;" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <button type="button" style="margin: auto;" class="navbar-toggler me-4" data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -91,8 +94,10 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
                     <div class="dropdown-menu border-0 m-0">
-                        <a href="feature.html" class="dropdown-item">Windows</a>
-                        <a href="project.html" class="dropdown-item">Doors</a>
+                        <a href="./coming-soon.html" class="dropdown-item">UPVC Doors and Windows</a>
+                        <a href="./coming-soon.html" class="dropdown-item">Alluminium Doors and Windows</a>
+                        <a href="./coming-soon.html" class="dropdown-item">Railings and Internal Partitions</a>
+                        <a href="./coming-soon.html" class="dropdown-item">Facades</a>
                         <!-- <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
@@ -102,7 +107,7 @@
                 <a href="project.html" class="nav-item nav-link">Projects</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="tel:+917947129016" class="btn btn-primary py-2 px-4 d-none d-lg-block">Call Now</a>
+            <a href="tel:+918146042285" class="btn btn-primary py-2 px-4 d-none d-lg-block">Call Now</a>
         </div>
     </nav>
     <!-- Navbar End -->
