--- a/project.html
+++ b/project.html
@@ -43,8 +43,8 @@
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status">
         </div>
-        <img width="700px" class="position-absolute top-50 start-50 translate-middle"
-            src="img/icons/logo-aleco-doors-and-windows.png" alt="Icon">
+        <img class="position-absolute top-50 start-50 translate-middle" src="img/icons/logo-aleco-doors-and-windows.png"
+            alt="Icon">
     </div>
     <!-- Spinner End -->
 
@@ -54,8 +54,8 @@
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-3">
-                    <a class="text-body px-2" href="tel:+917947129016"><i
-                            class="fa fa-phone-alt text-primary me-2"></i>+91 7947 129 016</a>
+                    <a class="text-body px-2" href="tel:+918146042285"><i
+                            class="fa fa-phone-alt text-primary me-2"></i>+91 8146-042-285 | + 91 9814-051-943</a>
                     <a class="text-body px-2" href="mailto:info@alecowindows.com"><i
                             class="fa fa-envelope-open text-primary me-2"></i>info@alecowindows.com</a>
                 </div>
@@ -68,7 +68,7 @@
                 <div class="h-100 d-inline-flex align-items-center">
                     <a class="btn btn-sm-square btn-outline-body me-1"
                         href="https://www.facebook.com/ecodoorswindows"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-sm-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a>
+                    <!-- <a class="btn btn-sm-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a> -->
                     <!-- <a class="btn btn-sm-square btn-outline-body me-1" href=""><i class="fab fa-linkedin-in"></i></a> -->
                     <a class="btn btn-sm-square btn-outline-body me-0"
                         href="https://www.instagram.com/ecodoorswindows/"><i class="fab fa-instagram"></i></a>
@@ -83,8 +83,9 @@
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn"
         data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <h1 class="text-primary m-0"><img class="me-3" src="img/icons/logo-aleco-doors-and-windows.png"
-                    width="350px" alt="Icon"></h1>
+            <img class="me-3 logo-img" src="./img/icons/logo-aleco-doors-and-windows.png" width="350px" alt="Icon"> <img
+                class="me-3 logo-img-mob" src="./img/icons/logo-aleco-doors-and-windows-mob.png" width="100%"
+                alt="Icon">
         </a>
         <button type="button" style="margin: auto;" class="navbar-toggler me-4" data-bs-toggle="collapse"
             data-bs-target="#navbarCollapse">
@@ -92,24 +93,26 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <!-- <a href="service.html" class="nav-item nav-link">Services</a> -->
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
                     <div class="dropdown-menu border-0 m-0">
-                        <a href="feature.html" class="dropdown-item">Windows</a>
-                        <a href="project.html" class="dropdown-item">Doors</a>
+                        <a href="./coming-soon.html" class="dropdown-item">UPVC Doors and Windows</a>
+                        <a href="./coming-soon.html" class="dropdown-item">Alluminium Doors and Windows</a>
+                        <a href="./coming-soon.html" class="dropdown-item">Railings and Internal Partitions</a>
+                        <a href="./coming-soon.html" class="dropdown-item">Facades</a>
                         <!-- <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         <a href="404.html" class="dropdown-item">404 Page</a> -->
                     </div>
                 </div>
-                <a href="project.html" class="nav-item nav-link">Projects</a>
+                <a href="project.html" class="nav-item nav-link active">Projects</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="tel:+917947129016" class="btn btn-primary py-2 px-4 d-none d-lg-block">Call Now</a>
+            <a href="tel:+918146042285" class="btn btn-primary py-2 px-4 d-none d-lg-block">Call Now</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -122,7 +125,7 @@
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
+                    <!-- <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li> -->
                     <li class="breadcrumb-item text-primary active" aria-current="page">Projects</li>
                 </ol>
             </nav>
@@ -143,19 +146,19 @@
                     <div class="nav nav-pills d-flex justify-content-between w-100 h-100 me-4">
                         <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4 active"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-1" type="button">
-                            <h3 class="m-0">01. Modern Complex</h3>
+                            <h3 class="m-0">01. Mount litera Zee school Amritsar</h3>
                         </button>
                         <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-2" type="button">
-                            <h3 class="m-0">02. Royal Hotel</h3>
+                            <h3 class="m-0">02. Excelsum High School Amritsar</h3>
                         </button>
                         <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-3" type="button">
-                            <h3 class="m-0">03. Mexwel Buiding</h3>
+                            <h3 class="m-0">03. Hotel sadka Amritsar</h3>
                         </button>
                         <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-0"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-4" type="button">
-                            <h3 class="m-0">04. Shopping Complex</h3>
+                            <h3 class="m-0">04. Nirava City Amritsar</h3>
                         </button>
                     </div>
                 </div>
@@ -165,19 +168,20 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-1.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-1.png"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h1 class="mb-3">25 Years Of Experience In Architecture Industry</h1>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-                                        diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit
-                                        clita duo justo magna dolore erat amet</p>
-                                    <p><i class="fa fa-check text-primary me-3"></i>Design Approach</p>
+                                    <h1 class="mb-3">One Of The Leading School Chains in India</h1>
+                                    <p class="mb-4">Invictus School Amritsar is known as 'Dream School' that aims to be
+                                        an answer to parent's prayers for their child's education. Indeed, this school
+                                        is a school for tomorrow's that encourages mastery not only of core academic
+                                        subjects but of higher cognitive skills that the global economy demands.</p>
+                                    <p><i class="fa fa-check text-primary me-3"></i>Quality materials</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Innovative Solutions</p>
-                                    <p><i class="fa fa-check text-primary me-3"></i>Project Management</p>
-                                    <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More</a>
+                                    <p><i class="fa fa-check text-primary me-3"></i>Wide range of products</p>
+                                    <!-- <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More</a> -->
                                 </div>
                             </div>
                         </div>
@@ -185,19 +189,19 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-2.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-2.png"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h1 class="mb-3">25 Years Of Experience In Architecture Industry</h1>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-                                        diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit
-                                        clita duo justo magna dolore erat amet</p>
-                                    <p><i class="fa fa-check text-primary me-3"></i>Design Approach</p>
-                                    <p><i class="fa fa-check text-primary me-3"></i>Innovative Solutions</p>
+                                    <h1 class="mb-3">Delivering best results with full professionalism</h1>
+                                    <p class="mb-4">Our company strives to maintain high standards of professionalism in
+                                        all aspects of their business. WE adhere to ethical business practices, treating
+                                        customers and employees with respect and integrity.</p>
+                                    <p><i class="fa fa-check text-primary me-3"></i>Professional installation</p>
+                                    <p><i class="fa fa-check text-primary me-3"></i>Timely delivery</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Project Management</p>
-                                    <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More</a>
+                                    <!-- <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More</a> -->
                                 </div>
                             </div>
                         </div>
@@ -205,19 +209,20 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-3.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-3.png"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h1 class="mb-3">25 Years Of Experience In Architecture Industry</h1>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-                                        diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit
-                                        clita duo justo magna dolore erat amet</p>
-                                    <p><i class="fa fa-check text-primary me-3"></i>Design Approach</p>
-                                    <p><i class="fa fa-check text-primary me-3"></i>Innovative Solutions</p>
-                                    <p><i class="fa fa-check text-primary me-3"></i>Project Management</p>
-                                    <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More</a>
+                                    <h1 class="mb-3">Team of highly experienced employees</h1>
+                                    <p class="mb-4">The team of highly experienced employees is a key factor in the
+                                        success of the best doors and windows company. This team consists of skilled
+                                        technicians and craftsmen who have extensive experience in the industry and are
+                                        able to handle even complex and challenging projects with ease.</p>
+                                    <p><i class="fa fa-check text-primary me-3"></i>Experienced team</p>
+                                    <p><i class="fa fa-check text-primary me-3"></i>References and reviews</p>
+                                    <p><i class="fa fa-check text-primary me-3"></i>Great Reputation</p>
+                                    <!-- <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More</a> -->
                                 </div>
                             </div>
                         </div>
@@ -225,19 +230,20 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-4.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-4.png"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h1 class="mb-3">25 Years Of Experience In Architecture Industry</h1>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-                                        diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit
-                                        clita duo justo magna dolore erat amet</p>
+                                    <h1 class="mb-3">The Nirvana Project</h1>
+                                    <p class="mb-4">Metcalfe Nirvana City is strategically located in Grand Trunk Road
+                                        in the city of Amritsar and is a well-planned project. The residential dwellings
+                                        are in Ready To Move state. Metcalfe Nirvana City project is an offering from
+                                        the well-established developer Prabhatam Infrastructures Ltd.</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Design Approach</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Innovative Solutions</p>
                                     <p><i class="fa fa-check text-primary me-3"></i>Project Management</p>
-                                    <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More</a>
+                                    <!-- <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More</a> -->
                                 </div>
                             </div>
                         </div>
