--- a/about.html
+++ b/about.html
@@ -14,7 +14,9 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&family=Teko:wght@400;500;600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&family=Teko:wght@400;500;600&display=swap"
+        rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -82,8 +84,7 @@
                 class="me-3 logo-img-mob" src="./img/icons/logo-aleco-doors-and-windows-mob.png" width="100%"
                 alt="Icon">
         </a>
-        <button type="button" style="margin: auto;" class="navbar-toggler me-4" data-bs-toggle="collapse"
-            data-bs-target="#navbarCollapse">
+        <button type="button" style="margin-left: 1.5rem;" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -135,17 +136,21 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.jpg" alt="">
-                        <img class="img-fluid" src="img/about-2.jpg" alt="">
+                        <img class="img-fluid" src="img/about-1.png" alt="">
+                        <img class="img-fluid" src="img/about-2.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h4 class="section-title">About Us</h4>
                     <h1 class="display-5 mb-4">A Creative Architecture Agency For Your Dream Home</h1>
-                    <p>ALECO By Eco doors and windows manufactures Aluminium/Upvc doors and windows, internal partitions, wardrobe shutters. We are serving in industry from last one decade.</p>
-                    <p class="mb-4">Registered in 2016, ECO Doors & Windows has made a name for itself in the list of top suppliers of in India and is one of the leading sellers of listed products. ECO Doors & Windows is listed in Trade India's list of verified sellers offering supreme quality of etc.</p>
+                    <p>ALECO By Eco doors and windows manufactures Aluminium/Upvc doors and windows, internal
+                        partitions, wardrobe shutters. We are serving in industry from last one decade.</p>
+                    <p class="mb-4">Registered in 2016, ECO Doors & Windows has made a name for itself in the list of
+                        top suppliers of in India and is one of the leading sellers of listed products. ECO Doors &
+                        Windows is listed in Trade India's list of verified sellers offering supreme quality of etc.</p>
                     <div class="d-flex align-items-center mb-5">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center border border-5 border-primary" style="width: 120px; height: 120px;">
+                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center border border-5 border-primary"
+                            style="width: 120px; height: 120px;">
                             <h1 class="display-1 mb-n2" data-toggle="counter-up">10</h1>
                         </div>
                         <div class="ps-4">
@@ -169,14 +174,17 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h4 class="section-title">Why Choose Us!</h4>
                     <h1 class="display-5 mb-4">Why You Should Trust Us? Learn More About Us!</h1>
-                    <p class="mb-4">We are a company that specializes in selling premium doors, windows and related products. We pride ourselves on offering the highest quality products at affordable prices. The satisfaction of our customers is our number one priority!</p>
+                    <p class="mb-4">We are a company that specializes in selling premium doors, windows and related
+                        products. We pride ourselves on offering the highest quality products at affordable prices. The
+                        satisfaction of our customers is our number one priority!</p>
                     <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex align-items-start">
                                 <img class="flex-shrink-0" src="img/icons/icon-2.png" alt="Icon">
                                 <div class="ms-4">
                                     <h3>Design Approach</h3>
-                                    <p class="mb-0">Our methodology for creating ideal designs involves a whole process for uniquely analysing and developing an enviroment.</p>
+                                    <p class="mb-0">Our methodology for creating ideal designs involves a whole process
+                                        for uniquely analysing and developing an enviroment.</p>
                                 </div>
                             </div>
                         </div>
@@ -185,7 +193,8 @@
                                 <img class="flex-shrink-0" src="img/icons/icon-3.png" alt="Icon">
                                 <div class="ms-4">
                                     <h3>Innovative Solutions</h3>
-                                    <p class="mb-0">From entryways to sliding glass doors, from architraves to casings, we have what you need for your home or office improvement project.</p>
+                                    <p class="mb-0">From entryways to sliding glass doors, from architraves to casings,
+                                        we have what you need for your home or office improvement project.</p>
                                 </div>
                             </div>
                         </div>
@@ -194,7 +203,8 @@
                                 <img class="flex-shrink-0" src="img/icons/icon-4.png" alt="Icon">
                                 <div class="ms-4">
                                     <h3>Project Management</h3>
-                                    <p class="mb-0">To achieve all project goals within the given constraints, we have a team of specialized workers.</p>
+                                    <p class="mb-0">To achieve all project goals within the given constraints, we have a
+                                        team of specialized workers.</p>
                                 </div>
                             </div>
                         </div>
@@ -288,7 +298,7 @@
         </div>
     </div> -->
     <!-- Team End -->
-        
+
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-body footer mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
@@ -362,8 +372,16 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
-
+    <a href="https://wa.me/918146042285?text=Hey!%20I%20would%20like%20to%20know%20more%20about%20your%20services."
+        class="btn btn-lg btn-primary btn-lg-square back-to-top"><img src="./img/whatsapp-aleco-windows-amritsar.png"
+            alt="aleco-whatsapp" /></a>
+    <div id="wa-box" class="wa-float back-to-top">
+        <i onclick="closeWA()" class="bi bi-x"></i>
+        <p>Let's chat about your dream project!</p>
+        <a href="https://wa.me/918146042285?text=Hey!%20I%20would%20like%20to%20know%20more%20about%20your%20services.">
+            Chat Now
+        </a>
+    </div>
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -379,6 +397,12 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <script>
+        function closeWA() {
+            document.getElementById("wa-box").style.visibility = "hidden";
+        }
+    </script>
 </body>
 
 </html>
