--- a/feature.html
+++ b/feature.html
@@ -86,8 +86,7 @@
             <h1 class="text-primary m-0"><img class="me-3" src="img/icons/logo-aleco-doors-and-windows.png"
                     width="350px" alt="Icon"></h1>
         </a>
-        <button type="button" style="margin: auto;" class="navbar-toggler me-4" data-bs-toggle="collapse"
-            data-bs-target="#navbarCollapse">
+        <button type="button" style="margin-left: 1.5rem;" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
