--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
                 class="me-3 logo-img-mob" src="./img/icons/logo-aleco-doors-and-windows-mob.png" width="100%"
                 alt="Icon">
         </a>
-        <button type="button" style="margin: auto;" class="navbar-toggler me-4" data-bs-toggle="collapse"
-            data-bs-target="#navbarCollapse">
+        <button type="button" style="margin-left: 1.5rem;" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -821,6 +820,12 @@
         <a href="https://wa.me/918146042285?text=Hey!%20I%20would%20like%20to%20know%20more%20about%20your%20services.">
             Chat Now
         </a>
+    </div>
+
+    <!-- Toast -->
+    <div id="toast">
+        <div id="txt1"></div>
+        <div id="txt2"></div>
     </div>
 
     <!-- JavaScript Libraries -->
