adding all the pages

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -99,10 +99,10 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Products</a>
                     <div class="dropdown-menu border-0 m-0">
-                        <a href="./coming-soon.html" class="dropdown-item">UPVC Doors and Windows</a>
-                        <a href="./coming-soon.html" class="dropdown-item">Alluminium Doors and Windows</a>
-                        <a href="./coming-soon.html" class="dropdown-item">Railings and Internal Partitions</a>
-                        <a href="./coming-soon.html" class="dropdown-item">Facades</a>
+                        <a href="./upvc-doors-windows.html" class="dropdown-item">UPVC Doors and Windows</a>
+                        <a href="./alluminium-doors-windows.html" class="dropdown-item">Alluminium Doors and Windows</a>
+                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal Partitions</a>
+                        <a href="./facades.html" class="dropdown-item">Facades</a>
                         <!-- <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
