--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
                     <div class="dropdown-menu border-0 m-0">
-                        <a href="./coming-soon.html" class="dropdown-item">UPVC Doors and Windows</a>
-                        <a href="./coming-soon.html" class="dropdown-item">Alluminium Doors and Windows</a>
-                        <a href="./coming-soon.html" class="dropdown-item">Railings and Internal Partitions</a>
-                        <a href="./coming-soon.html" class="dropdown-item">Facades</a>
+                        <a href="./upvc-doors-windows.html" class="dropdown-item">UPVC Doors and Windows</a>
+                        <a href="./alluminium-doors-windows.html" class="dropdown-item">Alluminium Doors and Windows</a>
+                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal Partitions</a>
+                        <a href="./facades.html" class="dropdown-item">Facades</a>
                         <!-- <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
@@ -231,8 +231,8 @@
                     <p>ALECO By Eco doors and windows manufactures Aluminium/Upvc doors and windows, internal
                         partitions, wardrobe shutters. We are serving in industry from last one decade.</p>
                     <p class="mb-4">Registered in 2014, ECO Doors & Windows has made a name for itself in the list of
-                        top suppliers of in India and is one of the leading sellers of listed products. ECO Doors &
-                        Windows is listed in Trade India's list of verified sellers offering supreme quality of etc.</p>
+                        top suppliers in India and is one of the leading sellers of windows and doors. ECO Doors &
+                        Windows is listed in Trade India's list of verified sellers offering supreme quality products.</p>
                     <div class="d-flex align-items-center mb-5">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center border border-5 border-primary"
                             style="width: 120px; height: 120px;">
@@ -435,7 +435,7 @@
                         </button>
                         <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-0"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-4" type="button">
-                            <h3 class="m-0">04. Nirava City Amritsar</h3>
+                            <h3 id="enquiry" class="m-0">04. Nirava City Amritsar</h3>
                         </button>
                     </div>
                 </div>
