adding slider for clients

--- a/index.html
+++ b/index.html
@@ -245,29 +245,12 @@
                             <h3 class="mb-0">Industry</h3>
                         </div>
                     </div>
-                    <a class="btn btn-primary py-3 px-5" href="./about.html">Read More</a>
+                    <a class="btn btn-primary py-3 px-5" href="./about.html">Know More</a>
                 </div>
             </div>
         </div>
     </div>
     <!-- About End -->
-
-    <!-- Carousel End -->
-    <!-- <div class="row-cus">
-        <div class="container">
-            <section class="customer-logos slider">
-                <div class="slide"><img src="./img/clients/image1.png"></div>
-                <div class="slide"><img src="./img/clients/image2.png"></div>
-                <div class="slide"><img src="./img/clients/image3.png"></div>
-                <div class="slide"><img src="./img/clients/image4.png"></div>
-                <div class="slide"><img src="./img/clients/image5.png"></div>
-                <div class="slide"><img src="./img/clients/image6.png"></div>
-                <div class="slide"><img src="./img/clients/image7.png"></div>
-                <div class="slide"><img src="./img/clients/image8.png"></div>
-            </section>
-        </div>
-    </div> -->
-
 
     <!-- Service Start -->
     <div class="container-xxl py-5">
@@ -846,34 +829,6 @@
         (function () {
             emailjs.init("BD_-QEJnyCnmuX06n");
         })();
-    </script>
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="./js/slick.min.js" type="text/javascript" charset="utf-8"></script>
-
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('.customer-logos').slick({
-                slidesToShow: 6,
-                slidesToScroll: 1,
-                autoplay: true,
-                autoplaySpeed: 1000,
-                arrows: false,
-                dots: false,
-                pauseOnHover: false,
-                responsive: [{
-                    breakpoint: 768,
-                    settings: {
-                        slidesToShow: 4
-                    }
-                }, {
-                    breakpoint: 520,
-                    settings: {
-                        slidesToShow: 3
-                    }
-                }]
-            });
-        });
     </script>
 
     <!-- Template Javascript -->
