--- a/about.html
+++ b/about.html
@@ -84,7 +84,8 @@
                 class="me-3 logo-img-mob" src="./img/icons/logo-aleco-doors-and-windows-mob.png" width="100%"
                 alt="Icon">
         </a>
-        <button type="button" style="margin-left: 1.5rem;" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <button type="button" style="margin-left: 1.5rem;" class="navbar-toggler me-4" data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -97,7 +98,8 @@
                     <div class="dropdown-menu border-0 m-0">
                         <a href="./upvc-doors-windows.html" class="dropdown-item">UPVC Doors and Windows</a>
                         <a href="./alluminium-doors-windows.html" class="dropdown-item">Alluminium Doors and Windows</a>
-                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal Partitions</a>
+                        <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal
+                            Partitions</a>
                         <a href="./facades.html" class="dropdown-item">Facades</a>
                         <!-- <a href="team.html" class="dropdown-item">Team Members</a>
                         <a href="appointment.html" class="dropdown-item">Appointment</a>
@@ -165,6 +167,141 @@
         </div>
     </div>
     <!-- About End -->
+
+    <!-- Carousel End -->
+    <div class="row-cus">
+        <div class="container">
+            <h1 style="color: rgb(244, 244, 244);margin-bottom: 20px;">Our Satisfied Customers</h1>
+            <section class="customer-logos d-flex">
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+                <div class="slide"><img src="./img/clients/1.png"></div>
+                <div class="slide"><img src="./img/clients/2.png"></div>
+                <div class="slide"><img src="./img/clients/3.png"></div>
+                <div class="slide"><img src="./img/clients/4.png"></div>
+                <div class="slide"><img src="./img/clients/5.png"></div>
+                <div class="slide"><img src="./img/clients/6.png"></div>
+            </section>
+        </div>
+    </div>
 
 
     <!-- Feature Start -->
@@ -394,6 +531,35 @@
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+
+    
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./js/slick.min.js" type="text/javascript" charset="utf-8"></script> -->
+
+    <!-- <script type="text/javascript">
+        $(document).ready(function () {
+            $('.customer-logos').slick({
+                slidesToShow: 6,
+                slidesToScroll: 1,
+                autoplay: true,
+                autoplaySpeed: 1000,
+                arrows: false,
+                dots: false,
+                pauseOnHover: false,
+                responsive: [{
+                    breakpoint: 768,
+                    settings: {
+                        slidesToShow: 4
+                    }
+                }, {
+                    breakpoint: 520,
+                    settings: {
+                        slidesToShow: 3
+                    }
+                }]
+            });
+        });
+    </script> -->
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
