minor fixes in nav and aluminium spellings

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
                     <div class="dropdown-menu border-0 m-0">
                         <a href="./upvc-doors-windows.html" class="dropdown-item">UPVC Doors and Windows</a>
-                        <a href="./alluminium-doors-windows.html" class="dropdown-item">Alluminium Doors and Windows</a>
+                        <a href="./aluminium-doors-windows.html" class="dropdown-item">Aluminium Doors and Windows</a>
                         <a href="./railings-internal-partitions.html" class="dropdown-item">Railings and Internal Partitions</a>
                         <a href="./facades.html" class="dropdown-item">Facades</a>
                         <!-- <a href="team.html" class="dropdown-item">Team Members</a>
@@ -290,7 +290,7 @@
                         <img class="bg-img" src="img/service-3.jpg" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-7.png" alt="Icon">
-                            <h3 class="mb-3">Alluminium Doors & Windows</h3>
+                            <h3 class="mb-3">Aluminium Doors & Windows</h3>
                             <p class="mb-4">Aluminium doors and windows can be manufactured with high-performance double
                                 glazing and weather stripping, improving their energy efficiency.</p>
                             <a class="btn" href="./coming-soon.html">Read More</a>
@@ -647,7 +647,7 @@
                             <select id="serviceEI" class="form-select" style="height: 55px;">
                                 <option selected>Choose Service</option>
                                 <option value="1">UPVC Windows and Doors</option>
-                                <option value="2">Alluminium Windows and Doors</option>
+                                <option value="2">Aluminium Windows and Doors</option>
                                 <option value="3">Railings and Internal Partitions</option>
                                 <option value="4">Facades</option>
                             </select>
