--- a/project.html
+++ b/project.html
@@ -80,7 +80,7 @@
 
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn"
+    <nav style="gap: 10px;" class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn"
         data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
             <img class="me-3 logo-img" src="./img/icons/logo-aleco-doors-and-windows.png" width="350px" alt="Icon"> <img
